# stilist24

./: .dockerignore  .env.prod.example  .gitignore  CLAUDE.md  NEXT_STEPS.md  docker-compose.prod.yml  file.md
ai-stylist-starter/: .dockerignore  .env.example  Dockerfile  Dockerfile.prod  README.md  alembic.ini  amvera.yml  docker-compose.yml  entrypoint.sh  openapi.yaml  pyproject.toml
ai-stylist-starter/alembic/: env.py
ai-stylist-starter/app/: main.py
ai-stylist-starter/data/: clothing_ontology.yaml  color_dimensions.yaml  outfit_templates.yaml
ai-stylist-starter/docs/: SCORING_SPEC.md
ai-stylist-starter/scripts/: download_models.py  eval_category_classifier.py
ai-stylist-starter/tests/: test_attribute_normalizer.py  test_auth.py  test_category_classifier.py  test_category_rules_service.py  test_color_combination_service.py  test_color_engine_v2.py  test_color_feature_extractor.py  test_color_try_on_service.py  test_cv_feature_extractor.py  test_error_envelope.py  test_events.py  test_explainer.py  test_feature_extractor.py  test_gap_analysis_service.py  test_gap_analyzer_v2.py  test_golden_scenarios.py  test_identity_dna.py  test_identity_subtype_profiles_completeness.py  test_insights.py  test_item_graph.py  test_item_phase0_attributes.py  test_outfit_engine_step4.py  test_outfit_generator_v2.py  test_outfit_scorer.py  test_palette_fit_scorer.py  test_personas.py  test_preference_quiz_color.py  test_preference_quiz_identity.py  test_purchase_evaluator.py  test_recommendations.py  test_redundancy.py  test_reference_looks_coverage.py  test_rules.py  (+14 more)
(+317 files in other folders)
